[package]
name = "hampel"
version = "0.2.0"
authors = ["HamaguRe <hamagure@space-denpa.jp>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HamaguRe/hampel.git"
homepage = "https://github.com/HamaguRe/hampel.git"
description = "Sequential outlier detection and removal using Hampel identifiers"
keywords = ["mathematics", "science"]
readme = "README.md"
exclude = [".gitignore", "./images"]

[features]
extrapolation = []

[dependencies.num-traits]
version = "0.2"
default-features = false